Add meta tags for SEO and author information
Added meta tags for description, keywords, and author.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kateryna Tsekhmayster - Dual Master's Student & AI Researcher</title>
+        <meta name="description" content="Kateryna Tsekhmayster (Kat Tsekhmayster, Kateryna TS, Kat TS) - Dual Master's Student in Economics & Political Science, AI & Emerging Technology Researcher specializing in International Relations, Economic Development, and Blockchain Applications">
+        <meta name="keywords" content="Kateryna Tsekhmayster, Kateryna TS, Kateryna, Kat Tsekhmayster, Kat TS, Tsekhmayster, kateryna-ts, economics researcher, political science, AI researcher, blockchain, emerging technology, international relations, economic development">
+        <meta name="author" content="Kateryna Tsekhmayster">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
