--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Kateryna Tsekhmayster (Kat Tsekhmayster, Kateryna TS, Kat TS) - Dual Master's Student in Economics & Political Science, AI & Emerging Technology Researcher specializing in International Relations, Economic Development, and Blockchain Applications">
         <meta name="keywords" content="Kateryna Tsekhmayster, Kateryna TS, Kateryna, Kat Tsekhmayster, Kat TS, Tsekhmayster, kateryna-ts, economics researcher, political science, AI researcher, blockchain, emerging technology, international relations, economic development">
         <meta name="author" content="Kateryna Tsekhmayster">
+    <meta name="google-site-verification" content="dDhxXDclxAJc7gjTMC-lCPlE7x3og6Zr16B3aFS3O98" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
