--- a/index.html
+++ b/index.html
@@ -87,6 +87,38 @@
                     </div>
                 </div>
 
+                                <div class="research-card">
+                    <h3 class="research-title">Brazilian Oil, Petrobras, And US-China Rivalry</h3>
+                    <p class="research-date">December, 2025</p>
+                    <p class="research-abstract">Brazil is rich in oil, and Petrobras is the largest national oil company with explicit and implicit influence on its operations. The current international environment is characterized by a multi-polar rivalry between the U.S. and China. Brazil is a strategically important region to the U.S due to its business connections with the commercial markets, geographical relevance, and material abundance. For China, Brazil is a developing nation with significant influence in Latin America, boasting an abundance of oil that China deeply desires. Brazil has been teetering on the line between the U.S. and China due to its knowledge and possession of strategic materials and proximity. The way Brazil utilizes Petrobras shapes its future political institutions. As Brazil exports abundant amounts of oil to China while maintaining technical and financial partnerships with the US, Petrobras acts as a strategic intermediary.</p>
+                    <div class="research-keywords">
+                        <span class="keyword">Oil</span>
+                        <span class="keyword">Energy</span>
+                        <span class="keyword">Brazil</span>
+                        <span class="keyword">United States</span>
+                        <span class="keyword">China</span>
+                        <span class="keyword">Latin America</span>
+                        <span class="keyword">Commodities</span>
+                        <span class="keyword">Geopolitics</span>
+                    </div>
+                </div>
+
+                                <div class="research-card">
+                    <h3 class="research-title">Quantum Labor Market Development in Emerging Countries</h3>
+                    <p class="research-date">December, 2025</p>
+                    <p class="research-abstract">Quantum technologies present themselves as a powerful emerging field with the capability of transforming not only technical computational tasks but also the composition of labor markets. The quantum workforce is lagging behind the development of quantum, with research indicating shortages in hardware, software, research, and business fields within the quantum sector. While the advanced economies are developing quantum computing capabilities, education on the matter is lacking. In developing countries, access to education in technological sectors is further strained. To build a quantum labor force, this research proposes a theoretical Quantum Labor Market Readiness Index (QLRI) wherein the capabilities of a country's academic and labor market are measured through indicators of digital infrastructure, human capital, labor market policies, innovation and economic integration, and regulation and ethics to produce a country score revealing the faults within the aggregate. With specificity, government action and industry collaboration can target the specific needs of different countries, thereby efficiently expanding quantum education into previously untapped labor markets.</p>
+                    <div class="research-keywords">
+                        <span class="keyword">Quantum</span>
+                        <span class="keyword">Quantum Development</span>
+                        <span class="keyword">Labor Market</span>
+                        <span class="keyword">Economics</span>
+                        <span class="keyword">Development</span>
+                        <span class="keyword">Development Economics</span>
+                        <span class="keyword">Economic Growth</span>
+                        <span class="keyword">Market Development</span>
+                    </div>
+                </div>
+
                 <div class="research-card">
                     <h3 class="research-title">Blockchain of International Relations: Universal Cosmopolitan Protocol</h3>
                     <p class="research-date">May 28, 2025</p>
