--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <div class="hero-content">
                 <div class="hero-accent-line"></div>
                 <h1 class="hero-name">Kateryna Tsekhmayster</h1>
-                <h2 class="hero-title">Dual Master's Student in Economics & Political Science</h2>
-                <p class="hero-subtitle">AI & Emerging Technology Researcher</p>
-                <p class="hero-description">Specializing in International Relations, Economic Development, and Blockchain Applications</p>
-            </div>
+                                    <p class="hero-subtitle">AI, Quantum and Emerging Technology Researcher Economist</p>
+                    <h2 class="hero-title">Dual Master's in Economics and Political Science with Focus on Emerging Technologies</h2>                <p class="hero-subtitle">AI & Emerging Technology Researcher</p>
+                    <p class="hero-description">Specializing in International Relations, Economic Development, Blockchain Applications, Quantum Development, and AI Expansion</p>
+                    <p class="hero-location">📍 Palm Beach, Florida</p>            </div>
         </div>
     </section>
 
