--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                                     <p class="hero-subtitle">AI, Quantum and Emerging Technology Researcher Economist</p>
                     <h2 class="hero-title">Dual Master's in Economics and Political Science with Focus on Emerging Technologies</h2>                <p class="hero-subtitle">AI & Emerging Technology Researcher</p>
                     <p class="hero-description">Specializing in International Relations, Economic Development, Blockchain Applications, Quantum Development, and AI Expansion</p>
-                    <p class="hero-location">📍 Palm Beach, Florida</p>            </div>
-        </div>
+                    <p class="hero-location">Palm Beach, Florida</p>                           </div>        </div>
     </section>
 
     <section id="about" class="about">
