--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <div class="professional-photo-container">
                         <div class="professional-photo-placeholder">
                             <div class="initials">KT</div>
+                                                        <a href="mailto:katykiev@me.com" class="photo-contact-btn">Contact Me</a>
                         </div>
                     </div>
                 </div>
@@ -46,7 +47,7 @@
                     <h2 class="hero-title">Dual Master's in Economics and Political Science with Focus on Emerging Technologies</h2>                
                     <p class="hero-description">Specializing in International Relations, Economic Development, Blockchain Applications, Quantum Development, and AI Expansion</p>
                     <p class="hero-location">Palm Beach, Florida</p>
-                                <a href="mailto:katykiev@me.com" class="hero-button">Contact Me</a></div>        </div>
+                                </div>        </div>
     </section>
 
     <section id="about" class="about">
