Replace image with initials in profile section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="photo-frame">
                     <div class="professional-photo-container">
                         <div class="professional-photo-placeholder">
-                            <img src="IMG_8307.JPG" alt="Kateryna Tsekhmayster" class="profile-photo">
+                            <div class="initials">KT</div>
                                                         <a href="mailto:katykiev@me.com" class="photo-contact-btn">Contact Me</a>
                         </div>
                     </div>
