Revert Apple-style enhancements from hero section
Removed the following Apple-style enhancements:
- Changed subtitle back to "AI, Quantum and Emerging Technology Economic Research"
- Deleted status banner
- Deleted featured impact statement
- Deleted CTA buttons
- Deleted social proof achievement badges

Returning to original simpler design per user preference.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="hero-content">
                 <div class="hero-accent-line"></div>
                 <h1 class="hero-name">Kateryna Tsekhmayster</h1>
-                                    <p class="hero-subtitle">Bridging Quantum Computing, AI, and International Relations Through Economic Research</p>
+                                    <p class="hero-subtitle">AI, Quantum and Emerging Technology Economic Research</p>
                     <h2 class="hero-title">Dual Master's in Economics and Political Science with Focus on Emerging Technologies</h2>                
                     <p class="hero-description">Specializing in International Relations, Economic Development, Blockchain Applications, Quantum Development, and AI Expansion</p>
                     <p class="hero-location">Palm Beach, Florida</p>
